--- a/style.css
+++ b/style.css
@@ -9,3 +9,42 @@ body {
   font-size: 16px;
   line-height: 1.5;
 }
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.navbar {
+  background-color: #1F2937;
+  color: #fff;
+  height: 60px;
+}
+
+.navbar .container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100%;
+}
+
+.navbar .logo {
+  font-size: 24px;
+  color: #F9FAF8;
+  font-weight: bold;
+}
+
+.links {
+  display: flex;
+  font-size: 1.2em;
+}
+
+ul {
+  list-style: none;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #F9FAF8;
+  margin-left: 24px;
+}
