--- a/style.css
+++ b/style.css
@@ -39,12 +39,56 @@ body {
   font-size: 1.2em;
 }
 
-ul {
+.navbar ul {
   list-style: none;
 }
 
-.navbar a {
+.navbar ul li a {
   text-decoration: none;
   color: #F9FAF8;
   margin-left: 24px;
+}
+
+.header {
+  background-color: #1F2937;
+  color: #F9FAF8;
+}
+
+.header .container {
+  display: flex;
+  min-height: 500px;
+  justify-content: space-between;
+  align-items: center;
+  gap: 70px;
+}
+
+h1 {
+  color: #F9FAF8;
+  font-size: 48px;
+  font-weight: 1000;
+}
+
+.hero-main-text p {
+  color: #E5E7EB;
+  font-size: 18px;
+}
+
+.container .image-placeholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #6D747D;
+  width: 1050px;
+  height: 250px;
+}
+
+.header .container button {
+  background-color: #3882f6;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 0.7rem;
+  border-style: none;
+  padding: 10px 40px;
+  margin-top: 10px;
 }
