--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -65,7 +65,7 @@ body {
 h1 {
   color: #F9FAF8;
   font-size: 48px;
-  font-weight: 1000;
+  font-weight: 900;
 }
 
 .hero-main-text p {
