--- a/style.css
+++ b/style.css
@@ -100,22 +100,25 @@ h1 {
   align-items: center;
 }
 
-.section .container .boxes {
+.section .boxes {
   display: flex;
   gap: 50px;
 }
 
-.section .container .boxes .item .text {
-  margin-top: 15px;
-  width: 200px;
-  text-align: center;
-}
-
-.section .container .item .box {
+.section .box {
   border: 6px solid #3882f6;
   border-radius: 10%;
   width: 200px;
   height: 200px;
+}
+
+.section .text {
+  margin-top: 15px;
+  width: 200px;
+  text-align: center;
+  line-height: 1.5rem;
+  font-size: 20px;
+  color: #6D747D;
 }
 
 h2 {
@@ -123,10 +126,4 @@ h2 {
   color: #1F2937;
   font-weight: 900;
   margin: 40px 0;
-}
-
-div .text {
-  line-height: 1.5rem;
-  font-size: 20px;
-  color: #6D747D;
 }
