--- a/style.css
+++ b/style.css
@@ -127,3 +127,30 @@ h2 {
   font-weight: 900;
   margin: 40px 0;
 }
+
+.quote-section {
+  background-color: #E5E7EB;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.quote-section > * {
+  width: 950px;
+  color: #1F2937;
+}
+
+.quote-section h3 {  
+  font-size: 36px;
+  font-weight: lighter;
+  font-style: italic;
+  text-align: justify;
+}
+
+.quote-section p {
+  font-size: 30px;
+  text-align: right;
+  font-weight: 700;
+}
