--- a/style.css
+++ b/style.css
@@ -154,3 +154,37 @@ h2 {
   text-align: right;
   font-weight: 700;
 }
+
+.sign-up-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 350px;
+}
+
+.sign-up-box .container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #3882F6;
+  color: #fff;
+  line-height: 1.5em;
+  height: 150px;
+  border-radius: 1em;
+}
+
+.sign-up-box h3 {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.sign-up-box button {
+  background-color: #3882F6;
+  border: 3px solid #fff;
+  color: #fff;
+  font-size: 22px;
+  font-weight: bold;
+  border-radius: 0.7rem;
+  padding: 6px 38px;
+}
