--- a/style.css
+++ b/style.css
@@ -43,10 +43,14 @@ body {
   list-style: none;
 }
 
-.navbar ul li a {
+.navbar a {
   text-decoration: none;
   color: #F9FAF8;
   margin-left: 24px;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
 }
 
 .header {
@@ -82,7 +86,7 @@ h1 {
   height: 250px;
 }
 
-.header .container button {
+.header button {
   background-color: #3882f6;
   color: #fff;
   font-size: 18px;
@@ -91,6 +95,12 @@ h1 {
   border-style: none;
   padding: 10px 40px;
   margin-top: 10px;
+}
+
+.header button:hover {
+  background-color: #fff;
+  color: #1F2937;
+  cursor: pointer;
 }
 
 .section .container {
@@ -189,12 +199,18 @@ h2 {
   padding: 6px 38px;
 }
 
+.sign-up-box button:hover {
+  background-color: #fff;
+  color: #3882F6;
+  cursor: pointer;
+}
+
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  height: 60px;
   background-color: #1F2937;
   color: #fff;
-  font-size: 20px;
+  font-size: 1em;
 }
